[package]
name = "overrider"
version = "0.1.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.17"
syn = {version = "1.0.23", features = ["full", "extra-traits"]}
quote = "1.0.6"

[lib]
proc-macro = true