[package]
name = "overrider"
version = "0.3.1"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
license = "GPL-2.0+"
description = "Override funcitons, methods, and more"
readme = "README.md"
repository = "https://github.com/Shizcow/overrider-rs"
keywords = ["override", "proc_macro", "overload", "final"]
categories = ["development-tools"]

[dependencies]
proc-macro2 = "1.0.17"
syn = {version = "1.0.23", features = ["full", "extra-traits"]}
quote = "1.0.6"

[lib]
proc-macro = true