[package]
name = "overrider_build"
version = "0.2.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0.23", features = ["full", "extra-traits"]}
quote = "1.0.6" # TODO: what actually needs quote?
core = { path = "../core" }
