[package]
name = "basic"
version = "0.1.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liboverloader = { path = "../../" }

[build-dependencies]
syn = {version = "1.0.23", features = ["full", "extra-traits"]}
quote = "1.0.6"