[package]
name = "flags"
version = "0.1.0"
authors = ["Shizcow <pohl.devin@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
overrider = { path = '../../overrider' }
clap = "2.33.1"
lazy_static = "1.4.0"
# TODO: 0.4

[build-dependencies]
overrider_build = { path = '../../overrider_build' }